:lipstick: fix: menualModal align

--- a/frontend/src/modal/menualModal.css
+++ b/frontend/src/modal/menualModal.css
@@ -7,7 +7,7 @@
   border-radius: 13px;
 }
 
-p{
+#menual-body{
   margin: 5px!important;
   white-space: pre-wrap!important;
   font-size: medium!important;
